<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>records</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>parsers</module>
        <module>utility</module>
        <module>app</module>
        <module>anns</module>
        <module>gui-utility</module>
        <module>data</module>
        <module>stf</module>
        <module>expressions</module>
        <module>functions</module>
    </modules>
    
    <dependencies>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>jdk8</artifactId>
            <version>2.5.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <!-- <maven.compiler.verbose>true</maven.compiler.verbose> -->
        <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- For Java 10
            <plugin>
                <artifactId>maven-toolchains-plugin</artifactId>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>10</version>
                            <vendor>oracle</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            -->
        </plugins>
    </build>


    <profiles>
        <profile>
            <id>quick</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.7.0</version>
                            <configuration>
                                <annotationProcessors>
                                    <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
                                    <annotationProcessor>org.checkerframework.checker.units.UnitsChecker</annotationProcessor>
                                    <annotationProcessor>annotation.ValueTypeChecker</annotationProcessor>
                                </annotationProcessors>
                                <compilerArgs>
                                    <!-- location of the annotated JDK, which comes from a Maven dependency -->
                                    <arg>-Xbootclasspath/p:${annotatedJdk}</arg>
                                    <arg>-AprintErrorStack</arg>
                                    <arg>-AskipDefs=records.grammar.|one.util.</arg>
                                    <arg>-Astubs=${project.basedir}/../stubs</arg>
                                    <arg>-Aunits=annotation.units.AbsColIndex,annotation.units.AbsRowIndex,annotation.units.GridAreaColIndex,annotation.units.GridAreaRowIndex,annotation.units.TableDataRowIndex,annotation.units.TableDataColIndex,annotation.units.RowOrColIndex</arg>
                                    <arg>-Xplugin:threadchecker.TCPlugin</arg>
                                    <arg>-Werror</arg>
                                </compilerArgs>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>

        <profile>
            <id>full</id>

            <activation>
                <property>
                    <name>check</name>
                    <value>full</value>
                </property>
            </activation>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.7.0</version>
                            <configuration>
                                <annotationProcessors>
                                    <!-- Add all the checkers you want to enable here -->
                                    <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
                                    <annotationProcessor>org.checkerframework.checker.units.UnitsChecker</annotationProcessor>
                                    <annotationProcessor>org.checkerframework.checker.i18n.I18nChecker</annotationProcessor>
                                    <annotationProcessor>annotation.ValueTypeChecker</annotationProcessor>
                                    <annotationProcessor>annotation.userindex.UserIndexChecker</annotationProcessor>
                                    <annotationProcessor>annotation.help.HelpFileChecker</annotationProcessor>
                                    <annotationProcessor>annotation.funcdoc.FuncDocChecker</annotationProcessor>
                                    <annotationProcessor>annotation.recorded.RecordedChecker</annotationProcessor>
                                </annotationProcessors>
                                <annotationProcessorPaths>
                                    <path>
                                        <groupId>groupId</groupId>
                                        <artifactId>anns</artifactId>
                                        <version>1.0-SNAPSHOT</version>
                                    </path>
                                </annotationProcessorPaths>
                                <compilerArgs>
                                    <!-- location of the annotated JDK, which comes from a Maven dependency -->
                                    <arg>-Xbootclasspath/p:${annotatedJdk}</arg>
                                    <arg>-AprintErrorStack</arg>
                                    <arg>-AskipDefs=records.grammar.|one.util.</arg>
                                    <arg>-Astubs=${project.basedir}/../stubs</arg>
                                    <arg>-Aunits=annotation.units.AbsColIndex,annotation.units.AbsRowIndex,annotation.units.GridAreaColIndex,annotation.units.GridAreaRowIndex,annotation.units.TableDataRowIndex,annotation.units.TableDataColIndex,annotation.units.RowOrColIndex</arg>
                                    <arg>-Apropfiles=${project.basedir}/../app/src/main/resources/transformations_en.properties:${project.basedir}/../app/src/main/resources/expression_en.properties:${project.basedir}/../app/src/main/resources/function_en.properties:${project.basedir}/../app/src/main/resources/newcolumn_en.properties:${project.basedir}/../app/src/main/resources/dataentry_en.properties:${project.basedir}/../app/src/main/resources/main_en.properties:${project.basedir}/../app/src/main/resources/import_en.properties</arg>
                                    <arg>-Ahelpfiles=${project.basedir}/../app/src/main/help/guess-format.xml</arg>
                                    <arg>-Afuncdocfiles=${project.basedir}/../app/src/main/funcdoc/boolean.xml;${project.basedir}/../app/src/main/funcdoc/comparison.xml;${project.basedir}/../app/src/main/funcdoc/conversion.xml;${project.basedir}/../app/src/main/funcdoc/core.xml;${project.basedir}/../app/src/main/funcdoc/datetime.xml;${project.basedir}/../app/src/main/funcdoc/list.xml;${project.basedir}/../app/src/main/funcdoc/listprocess.xml;${project.basedir}/../app/src/main/funcdoc/lookup.xml;${project.basedir}/../app/src/main/funcdoc/math.xml;${project.basedir}/../app/src/main/funcdoc/number.xml;${project.basedir}/../app/src/main/funcdoc/operators.xml;${project.basedir}/../app/src/main/funcdoc/text.xml;${project.basedir}/../app/src/main/funcdoc/tuple.xml</arg>
                                    <arg>-Xplugin:threadchecker.TCPlugin</arg>
                                    <arg>-Werror</arg>
                                </compilerArgs>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>